🔧 chore(stock): PMD 위반 수정 (SPEC-CACHE-001)
- StockListService: ConfusingTernary(if 조건 반전), GuardLogStatement(isDebugEnabled 가드)
- StockListCacheRepositoryIntegrationTest: UseExplicitTypes(var→ObjectMapper), UseGetFirst(get(0)→getFirst()), RelianceOnDefaultCharset(StandardCharsets.UTF_8)
- StockListCacheRepositoryTest: ShortClassName(Save→SaveTests), UseGetFirst
- StockListServiceTest: UseGetFirst

🗿 MoAI <email@mo.ai.kr>